# play-rust

./: .gitignore  .gitmodules  Cargo.toml  README.org  play-book.org  play-ground.org  play-notes.org  play-rust_expanded.rs  play-std.org
hello-ferris/: Cargo.toml
hello-ferris/src/: main.rs
hello-rust/: Cargo.toml
hello-rust/src/: main.rs
src/: hello.md  hello.rs  main.md  main.rs  main.snippet
src/world/: mod.md  mod.rs
world/: Cargo.toml
world/src/: lib.rs
